<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_splash">SplashActivity</string>

    <!-- old version -->
    <string name="app_id">148834428643556</string>
    <string name="action_settings">Settings</string>
    <string name="date">Uploade date:</string>
    <string name="more">More details about file</string>
    <string name="title">Register a new user</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="register_button">Register</string>
    <string name="username">Enter your email address</string>
    <string name="password">Enter your password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="app_name">Student Note </string>
    <string name="submitbutn">Submit</string>
    <string name="hit_mail">E-mail address</string>
    <string name="forgot_password">If you forgot your password enter your e-mail address you used to register!</string>
    <string name="forgot_password_login">Forgot password</string>
    <string name="save">Save</string>
    <string name="not_set">Not set</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="tag">Choose a tag</string>
    <string name="titleadd">Title</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="title_activity_voice_recording">VoiceRecordingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="play">Play</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>

    <!-- new version -->
    <string name="fb_login">Facebook login</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_listing_elements">""</string>
    <string name="title_activity_fragment_for_lists">FragmentForLists</string>
    <string name="notes">NOTES</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <string name="enter_a_title">Enter a title</string>
    <string name="no_reminder_set">Not set</string>
    <string name="note_saved">Note saved successfully!</string>
    <string name="note_not_saved">Error at save!</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_note_details">NoteDetailsActivity</string>
    <string name="title_activity_broadcast_for_reminder">BroadcastForReminder</string>
    <string name="title_activity_gcmintent_service">GCMIntentService</string>

</resources>