<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Register_screen" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_weight="4"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_margin"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_logo_new" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/userName_Register"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_padding"
            android:layout_marginRight="@dimen/button_padding"
            android:background="@color/text_field_color"            
            android:ems="10"
            android:gravity="left|center_vertical"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/small_margin"
            android:textColor="@color/background_color"
            android:textSize="@dimen/edittext_size" />

        <EditText
            android:id="@+id/password_Register"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_padding"
            android:layout_marginRight="@dimen/button_padding"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@color/text_field_color"       
            android:ems="10"
            android:gravity="left|center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/small_margin"
            android:textColor="@color/background_color"
            android:textSize="@dimen/edittext_size" />

        <EditText
            android:id="@+id/confirmPassword_Register"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_padding"
            android:layout_marginRight="@dimen/button_padding"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@color/text_field_color"       
            android:ems="10"
            android:gravity="left|center_vertical"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/small_margin"
            android:textColor="@color/background_color"
            android:textSize="@dimen/edittext_size" />

        <Button
            android:id="@+id/btnRegister_Register"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_padding"
            android:layout_marginRight="@dimen/button_padding"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@drawable/blue_button_selector"
            android:text="@string/register_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/edittext_size" />
    </LinearLayout>

</LinearLayout>