<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:weightSum="10" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_logo_new" />

        <TextView
            android:id="@+id/forgotpswView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/large_margin"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="top"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/email_Forgot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_padding"
            android:layout_marginRight="@dimen/button_padding"
            android:background="@android:color/white"
            android:ems="10"
            android:gravity="left|center_vertical"
            android:hint="@string/hit_mail"
            android:padding="@dimen/small_margin"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray_color"
            android:textSize="@dimen/edittext_size" />

        <Button
            android:id="@+id/SubmitBtn_Forgot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_padding"
            android:layout_marginRight="@dimen/button_padding"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@drawable/blue_button_selector"
            android:text="@string/submitbutn"
            android:textColor="@android:color/white"
            android:textSize="@dimen/edittext_size" />
    </LinearLayout>

</LinearLayout>