<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/small_margin"
        android:background="@color/background_color"
        android:orientation="vertical"
        tools:context=".AddNoteActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@drawable/image_list_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/white"
                    android:hint="@string/titleadd"
                    android:maxLength="15"
                    android:paddingLeft="@dimen/small_margin"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/gray_color"
                    android:textSize="@dimen/edittext_size" />

                <TextView
                    android:id="@+id/tag"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@android:color/white"
                    android:paddingLeft="@dimen/small_margin"
                    android:text="@string/tag"
                    android:textColor="@color/gray_color"
                    android:textSize="@dimen/edittext_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/blue_button_selector"
                android:text="@string/add"
                android:textColor="@android:color/white"
                android:textSize="@dimen/edittext_size" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/blue_button_selector"
                android:text="@string/clear"
                android:textColor="@android:color/white"
                android:textSize="@dimen/edittext_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/transparent_button_selector"
                android:src="@drawable/deviceaccessalarms" />

            <TextView
                android:id="@+id/setReminder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="55dp"
                android:background="@drawable/transparent_button_selector"
                android:gravity="center"
                android:hint="@string/not_set"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:visibility="gone" />

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_centerHorizontal="true" >

                    <VideoView
                        android:id="@+id/videoView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:visibility="gone" >
                    </VideoView>
                </FrameLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/image_list_image"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/blue_button_selector"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/edittext_size" />
    </LinearLayout>

</ScrollView>