<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/medium_margin"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:adjustViewBounds="true"
            android:scaleType="centerInside" />

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/title"
                style="@style/EditTextAppTheme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/enter_a_title"
                android:maxLength="15"
                android:paddingLeft="@dimen/small_margin"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edittext_size" />

            <Spinner
                android:id="@+id/tagSpinner"
                style="@style/SpinnerAppTheme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:paddingLeft="@dimen/small_margin"
                android:popupBackground="@color/dark_gray"
                android:prompt="@string/tag"
                android:textColor="@android:color/white"
                android:textSize="@dimen/edittext_size" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imageLayout"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:background="@color/light_gray_for_divider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/divider1"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:background="@color/dark_gray_for_divider" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider2"
        android:layout_margin="@dimen/medium_margin"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/blue_button_selector"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:textSize="@dimen/edittext_size" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/blue_button_selector"
            android:text="@string/clear"
            android:textColor="@android:color/white"
            android:textSize="@dimen/edittext_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reminderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLayout"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:background="@drawable/transparent_light_blue_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/reminderImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:src="@drawable/deviceaccessalarms" />

        <TextView
            android:id="@+id/reminderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large_margin"
            android:text="@string/no_reminder_set"
            android:textColor="@android:color/white"
            android:textSize="@dimen/edittext_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dividerBottomLayout"
        android:layout_below="@+id/reminderLayout"
        android:layout_margin="@dimen/medium_margin"
        android:background="@android:color/black"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center" >

            <!--
                 <ImageView 
                android:id="@+id/listenImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/listen_250px"/>
            -->

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" >

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:visibility="gone" >
                </VideoView>
            </FrameLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dividerBottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:orientation="vertical" >

        <View
            android:id="@+id/dividerBottom1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray_for_divider" />

        <View
            android:id="@+id/dividerBottom2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray_for_divider" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@drawable/blue_button_selector"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/edittext_size" />
    </LinearLayout>

</RelativeLayout>